Thu Nov  7 21:02:39 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/config.c src/tds/util.c:
	- Namespace cleanup.

Thu Nov  7 16:44:53 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt:
	- Update status of dbcanquery() and dbclrbuf().

Thu Nov  7 16:36:09 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt include/sybdb.h include/tds.h src/dblib/dblib.c
	  src/tds/mem.c src/tds/token.c:
	- Implement dbchange(), dbname(), dbservcharset().

Thu Nov  7 13:44:42 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/util.c:
	- Make tdsdump_open(NULL) and tdsdump_open("") equivalent
	  to tdsdump_close().  Fixes bug introduced with the
	  tds_dstr*() code (logging always enabled to tdsdump.out
	  by default).

Thu Nov  7 12:27:08 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/unittests/t0005.c src/dblib/unittests/t0007.c:
	- Add some informational output about expected failures.

Thu Nov  7 12:10:39 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h src/dblib/dblib.c:
	- Bug fix:  Don't stop dbresults after TDS_CMD_DONE result
	  from tds_process_result_tokens().
	- Bug fix:  Trap out-of-range column numbers in dbbind().
	  Trap attempt to bind with no results, instead of crashing.

Thu Nov  7 10:49:46 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/odbc/odbc.c:
	- If we aren't freetds_conf_less, retain the network port
	  information from freetds.conf.  Otherwise it is set to
	  0 and we can't connect without redundantly specifying
	  the port in odbc.ini.

Thu Nov  7 14:21:38 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/native.c: start to implement native_sql function

Thu Nov  7 11:14:16 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/Makefile.am src/odbc/prepare_query.c src/odbc/native.c:
	- split prepare_call in native.c (indented)

Thu Nov  7 11:01:30 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/mem.c:
	- small namespace cleanup
